Revision history for Perl module TestRail::API

0.018 2015-01-29 TEODESIAN
    - Better finding of $HOME in testrail-report and the prove plugin for cross-platform usage

0.017 2015-01-29 TEODESIAN
    - Explicitly import List::Util in TestRail::API, this causes issues on some perls
    - Require minimum version of Term::ANSIColor
    - Fix bad regex for finding filename in testrail_report

0.016 2015-01-26 TEODESIAN
    - Use correct perl when invoking scripts to fix cpantesters failures.
    - Use parent instead of base, this confuses older perls

0.015 2015-01-25 TEODESIAN
    - Remove all usage of IO::Capture for more concise verbose test output.  Makes cpantesters/travis wig out?

0.014 2015-01-23 TEODESIAN
    - Fixed issue where testrail-report would not parse the results of multiple tests in a TAP file or stream.
    - Fixed issue where testrail-report would erroneously attempt to report the results of subtests.
    - Parse TODO/SKIP messages correctly, add todo reason to the test notes
    - Set SKIP_ALL tests status correctly
    - Add TestRail::API::getConfigurations method
    - Add TestRail::API::getChildRuns and getChildRunByName methods to extract runs from plans when passed names
    - Add ability to pass version to testrail-report & App::Prove::Plugin::TestRail

0.013 2015-01-04 TEODESIAN
    - Remove usage of Types::Serialiser, and use JSON::MaybeXS (odd intermittent errors on testers)
    - Remove checking of user being in getUsers, this won't work with external (LDAP) auth

0.012 2014-12-30 TEODESIAN
    - DZIL tidying
    - Re-enabled some of the critic tests, fixed a few related issues
    - Improve safety of constructor, try to die with helpful messages as soon as possible
    - Add class usage checks and test for that as author tests
    - Add tests for the server going away, and fix issues encountered therein.
    - Add fatal type checking of inputs for all methods, add test to make sure exceptions thrown correctly