@@ -9,6 +9,7 @@ use utf8;
 
 use parent qw/TAP::Parser/;
 use Carp qw{cluck confess};
+use POSIX qw{floor};
 
 use TestRail::API;
 use Scalar::Util qw{reftype};
@@ -73,6 +74,8 @@ Get the TAP Parser ready to talk to TestRail, and register a bunch of callbacks 
 
 It is worth noting that if neither step_results or case_per_ok is passed, that the test will be passed if it has no problems of any sort, failed otherwise.
 In both this mode and step_results, the file name of the test is expected to correspond to the test name in TestRail.
+
+This module also attempts to calculate the elapsed time to run each test if it is run by a prove plugin rather than on raw TAP.
 
 =cut
 
@@ -181,6 +184,10 @@ sub new {
     if (defined($self->{'_iterator'}->{'command'}) && reftype($self->{'_iterator'}->{'command'}) eq 'ARRAY' ) {
         $self->{'file'} = $self->{'_iterator'}->{'command'}->[-1];
         print "PROCESSING RESULTS FROM TEST FILE: $self->{'file'}\n";
+        $self->{'track_time'} = 1;
+    } else {
+        #Not running inside of prove in real-time, don't bother with tracking elapsed times.
+        $self->{'track_time'} = 0;
     }
 
     #Make sure the step results field passed exists on the system
@@ -188,6 +195,8 @@ sub new {
 
     $self->{'tr_opts'} = $tropts;
     $self->{'errors'}  = 0;
+    #Start the shot clock
+    $self->{'starttime'} = time();
 
     return $self;
 }
@@ -257,6 +266,11 @@ sub testCallback {
     my (@args) = @_;
     my $test = $args[0];
     our $self;
+
+    if ( $self->{'track_time'} ) {
+        #Test done.  Record elapsed time.
+        $self->{'tr_opts'}->{'result_options'}->{'elapsed'} = _compute_elapsed($self->{'starttime'},time());
+    }
 
     #Don't do anything if we don't want to map TR case => ok or use step-by-step results
     if ( !($self->{'tr_opts'}->{'step_results'} || $self->{'tr_opts'}->{'case_per_ok'}) ) {
@@ -332,6 +346,8 @@ sub testCallback {
     my $custom_options = $self->{'tr_opts'}->{'result_custom_options'};
 
     _set_result($run_id,$test_name,$status,$notes,$options,$custom_options);
+    #Re-start the shot clock
+    $self->{'starttime'} = time();
 
     #Blank out test description in anticipation of next test
     # also blank out notes
@@ -350,9 +366,14 @@ Otherwise, upload the overall results of the test to TestRail.
 sub EOFCallback {
     our $self;
 
+    if ( $self->{'track_time'} ) {
+        #Test done.  Record elapsed time.
+        $self->{'tr_opts'}->{'result_options'}->{'elapsed'} = _compute_elapsed($self->{'starttime'},time());
+    }
+
     if (!(!$self->{'tr_opts'}->{'step_results'} xor $self->{'tr_opts'}->{'case_per_ok'})) {
         print "Nothing left to do.\n";
-        undef $self->{'tr_opts'};
+        undef $self->{'tr_opts'} unless $self->{'tr_opts'}->{'debug'};
         return 1;
     }
 
@@ -379,7 +400,7 @@ sub EOFCallback {
     print "Setting results...\n";
     my $cres = _set_result($run_id,$test_name,$status,$notes,$options,$custom_options);
 
-    undef $self->{'tr_opts'};
+    undef $self->{'tr_opts'} unless $self->{'tr_opts'}->{'debug'};
 
     return $cres;
 }
@@ -388,6 +409,8 @@ sub _set_result {
     my ($run_id,$test_name,$status,$notes,$options,$custom_options) = @_;
     our $self;
     my $tc;
+
+    print "Test elapsed: ".$options->{'elapsed'}."\n" if $options->{'elapsed'};
 
     print "Attempting to find case by title '".$test_name."'...\n";
     $tc = $self->{'tr_opts'}->{'testrail'}->getTestByName($run_id,$test_name);
@@ -413,6 +436,32 @@ sub _set_result {
         $self->{'errors'}++;
     }
 
+}
+
+#Compute the expected testrail date interval from 2 unix timestamps.
+sub _compute_elapsed {
+    my ($begin,$end)  = @_;
+    my $secs_elapsed  = $end - $begin;
+    my $mins_elapsed  = floor($secs_elapsed / 60);
+    my $secs_remain   = $secs_elapsed % 60;
+    my $hours_elapsed = floor($mins_elapsed / 60);
+    my $mins_remain   = $mins_elapsed % 60;
+
+    my $datestr = "";
+
+    #You have bigger problems if your test takes days
+    if ($hours_elapsed) {
+        $datestr .= "$hours_elapsed"."h $mins_remain"."m";
+    } else {
+        $datestr .= "$mins_elapsed"."m";
+    }
+    if ($mins_elapsed) {
+        $datestr .= " $secs_remain"."s";
+    } else {
+        $datestr .= " $secs_elapsed"."s";
+    }
+    undef $datestr if $datestr eq "0m 0s";
+    return $datestr;
 }
 
 1;
