@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 use Test::More 'tests' => 2;
-
+sleep(2);
 pass('STORAGE TANKS SEARED');
 note('whee');
 fail('NOT SO SEARED AFTER ARR');
